[package]
name = "rust-web-book"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
warp = "0.3.7"

# 本地导入
handle-errors = { path = "handle-errors" }

uuid = { version = "1.16.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
